# sirius_arm

./: .mxproject  CMakeCache.txt  CMakeLists.txt  F427.ioc  F427_Concised.ioc  Makefile  README.txt  cmake_install.cmake  main.cpp
Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: can.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
MDK-ARM/: BLDC_Motor.c  BLDC_Motor.h  Bezier.c  Bezier.h  CAN_BLDC.c  CAN_BLDC.h  CHECK_STATUS.c  CHECK_STATUS.h  F427.uvguix.LingweiWRB  F427.uvoptx  F427.uvprojx  F427_Concised.uvguix.LingweiWRB  F427_Concised.uvoptx  F427_Concised.uvprojx  JLinkLog.txt  REMOTE_CONTROL.c  REMOTE_CONTROL.h  SPI_DMA.c  SPI_DMA.h  bsp_can.c  bsp_can.h  bsp_delay.c  bsp_delay.h  bsp_rc.c  bsp_spi.c  bsp_spi.h  include_files.h  startup_stm32f427xx.lst  struct_typedef.c
MDK-ARM/F427/: F427.axf  F427.build_log.htm  F427.hex  F427.htm  F427.lnp  F427.map  F427_F427.dep  bezier.crf  bezier.d  bsp_can.crf  bsp_can.d  bsp_delay.crf  bsp_delay.d  bsp_rc.crf  bsp_rc.d  bsp_spi.crf  bsp_spi.d  can.crf  can.d  can_bldc.crf  can_bldc.d  check_status.crf  check_status.d  dma.crf  dma.d  gpio.crf  gpio.d  main.crf  main.d  remote_control.crf  remote_control.d  spi.crf  spi.d  spi_dma.crf  spi_dma.d  startup_stm32f427xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_can.crf  stm32f4xx_hal_can.d  (+44 more)
MDK-ARM/RTE/_F427/: RTE_Components.h
MDK-ARM/RTE/_F427_Concised/: RTE_Components.h
Sirius_Arm/: Arm_Interface.h  CMakeLists.txt  Makefile  Sirius_Arm.cpp  Sirius_Arm.h  cmake_install.cmake
spi/: CMakeLists.txt  Makefile  cmake_install.cmake  spi.cpp  spi.h
urdf/: six_dof_arm.urdf
